--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,7 @@ netty.server.worker-count=6
 netty.server.keep-alive=true
 netty.server.backlog=100
 netty.server.tcp-port=8090
+
+spring.mail.host=smtp.126.com
+spring.mail.username=minyuezhijia@126.com
+spring.mail.password=
