add mail receiver

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,4 @@ netty.server.tcp-port=8090
 
 spring.mail.host=smtp.126.com
 spring.mail.username=minyuezhijia@126.com
-spring.mail.password=
+spring.mail.password=MYZJ2019
